libfab/c/asdf/asdf.h

struct PackedTree_;
struct Path_;
struct CMSpath_;
////////////////////////////////////////////////////////////////////////////////

enum ASDFstate { FILLED, EMPTY, BRANCH, LEAF, VIRTUAL };
/** @struct ASDF_
    @brief ASDF tree node
*/


typedef struct ASDF_ {
    /** @var state
        ASDF cell type (FILLED, EMPTY, BRANCH, or LEAF) */
    enum ASDFstate state;
    /** @var X
        X bounds of ASDF cell*/
    /** @var Y
        Y bounds of ASDF cell*/
    /** @var Z
        Z bounds of ASDF cell */

    Interval X, Y, Z;

    /** @var branches
        Array of branches (with NULLs) */
    struct ASDF_* branches[8];

    /** @var d
        Array of distance samples */
    float d[8];

    /** @var data
        Pointer to situation-dependent data */
    union {
        void* vp;
        struct CMSpath_* (*cms)[4];
        uint32_t* tri;
        struct Path_** contour;
    } data;
} ASDF;
/** @brief Converts a PackedTree into an ASDF data structure
    @param tree PackedTree
    @param region Region on which to render the expression
    @param merge_leafs Boolean determining whether leaf cells are merged
    @param halt Integer that should be set to 1 to abort render
*/
ASDF*  build_asdf(
    struct PackedTree_* const tree, const Region region,
    const _Bool merge_leafs, volatile int* const halt);
/** @brief Returns the minimum d value in the ASDF
*/
float asdf_get_min(const ASDF* const asdf);
/** @brief Returns the maximum d value in the ASDF
*/
float asdf_get_max(const ASDF* const asdf);
/** @brief Returns the height of an ASDF
 */
int get_depth(const ASDF* const asdf);
/** @brief Generates a root for an ASDF
    @details Evaluates the tree at region corners but does not recurse
*/
ASDF* asdf_root(struct PackedTree_* tree, Region region);
/** @brief Recursively frees an ASDF data structure
*/
void free_asdf(ASDF* asdf);
/** @brief Performs trilinear interpolation
    @param d Samples at all eight corners, arranged in increasing binary order
*/
float interpolate(const float d[8], const float x, const float y, const float z,
                  const float xmin, const float ymin, const float zmin,
                  const float xmax, const float ymax, const float zmax);
/** @brief Simplifies an ASDF cell by merging children non-recursively
    @param asdf Target ASDF
    @param merge_leafs If true, merge leaf cells as well as full/empty cells
*/
void simplify(ASDF* const asdf, const _Bool merge_leafs);
/** @brief Finds the number of voxels along each dimension
    @param ni Target for i voxel count
    @param nj Target for j voxel count
    @param nk Target for k voxel count
    @details Sometimes not accurate due to floating-point rounding.  Sorry.
*/
void find_dimensions(const ASDF* const asdf, int* ni, int* nj, int* nk);
/** @brief  Returns cell count in this ASDF
*/
int count_cells(const ASDF* const asdf);
/** @brief Returns the number of leaf cells in this ASDF
*/
int count_leafs(const ASDF* const asdf);
/**  @brief Scales the ASDf dimensions by the given scale factor
*/
void asdf_scale(ASDF* const asdf, const float scale);
/** @brief Slices an ASDF at the given z level
    @returns A flat (xy plane) ASDF with appropriate samples
*/
ASDF* asdf_slice(const ASDF* const old, const float z);
/** @brief Fills the values of asdf->d[i] with d samples from its children.
*/
void get_d_from_children(ASDF* const asdf);
/** @brief Fills a set of bins with the number of cells at that tree level
    @param bins Array of appropriate size (number of ASDF levels), initialized to all zeros
    @param level 0 for top-level invocation
*/
void asdf_histogram(const ASDF* const asdf, int (*bins)[4], const int level);